@@ -70,7 +70,8 @@ outside that range will be constrained.  This is supported on Windows
 .PP
 On Mac OS X, \fB\-modified\fR gets or sets the modification state of the
 window (determines whether the window close widget contains the modification
-indicator). \fB\-titlepath\fR gets or sets the path of the file referenced as
+indicator and whether the proxy icon is draggable).
+\fB\-titlepath\fR gets or sets the path of the file referenced as
 the window proxy icon (which can be dragged and dropped in lieu of the file's
 finder icon). \fB\-alpha\fR sets the alpha transparency level of the window,
 it accepts a value from \fB0.0\fR (fully transparent) to \fB1.0\fR (opaque),
@@ -450,8 +451,9 @@ window in the stacking order.
 \fBwm state \fIwindow\fR ?newstate?
 If \fInewstate\fR is specified, the window will be set to the new state,
 otherwise it returns the current state of \fIwindow\fR: either
-\fBnormal\fR, \fBiconic\fR, \fBwithdrawn\fR, \fBicon\fR, or (Windows only)
-\fBzoomed\fR.  The difference between \fBiconic\fR and \fBicon\fR is that
+\fBnormal\fR, \fBiconic\fR, \fBwithdrawn\fR, \fBicon\fR, or (Windows and Mac
+OS X only) \fBzoomed\fR.
+The difference between \fBiconic\fR and \fBicon\fR is that
 \fBiconic\fR refers to a window that has been iconified (e.g., with the
 \fBwm iconify\fR command) while \fBicon\fR refers to a window whose only
 purpose is to serve as the icon for some other window (via the \fBwm
